@@ -1,3 +1,10 @@
+2001-11-15  H.J. Lu  <hjl@gnu.org>
+
+	* sysdeps/unix/sysv/linux/mips/sys/procfs.h: Don't include
+	<signal.h>, <sys/ucontext.h> nor <asm/elf.h>. Updated for gdb.
+
+	* sysdeps/unix/sysv/linux/mips/sys/user.h: New.
+
 2002-02-07  H.J. Lu  <hjl@gnu.org>
 
 	* sysdeps/mips/atomicity.h (compare_and_swap): Remove
